fix: add missing Vue bindings for instrument button titles and German translations

--- a/android/app/src/main/res/values-de/strings.xml
+++ b/android/app/src/main/res/values-de/strings.xml
@@ -305,4 +305,10 @@
     
     <!-- Piano Key Labels -->
     <string name="piano_key_b">H</string>
+    
+    <!-- Instruments -->
+    <string name="violin">Geige</string>
+    <string name="flute">Flöte</string>
+    <string name="doublebass">Kontrabass</string>
+    <string name="start_game">Spiel starten</string>
 </resources>
