--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -96,6 +96,9 @@
     <string name="unlock_squirrel_message">Get 10 correct to unlock the squirrel! 🐿️</string>
     <string name="unlock_octopus_message">Get 20 correct to unlock the octopus! 🐙</string>
     <string name="all_animals_unlocked">All animals unlocked! 🎉</string>
+    <string name="transpose_challenge">Listen carefully! Chords are now changing pitch! 🎵</string>
+    <string name="squirrel_returns">The squirrel is back to help! Octopus still sleeping. 🐿️</string>
+    <string name="all_friends_return">All friends are back to help you! 🐿️🐙</string>
     
     <!-- Mascot Messages for Unlocks -->
     <string name="mascot_wave_unlocked">Great! You unlocked wavy melodies! 🌊</string>
