--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     
     <!-- Chords - Main Menu -->
     <string name="chord_color_matching">Chord Color Matching</string>
-    <string name="mood_landscapes">Mood Landscapes</string>
+    <string name="chords_stable_instable">Stable Or Instable</string>
     <string name="chord_building">Chord Building</string>
     <string name="missing_note">Guess the Missing Note</string>
     <string name="chord_characters">Chord Story Characters</string>
@@ -68,9 +68,9 @@
     <string name="chord_color_matching_intro">Listen to the chord and select the color that matches how it sounds to you.</string>
     <string name="play_chord">Play Chord</string>
     
-    <!-- Chords - Mood Landscapes Activity -->
-    <string name="mood_landscapes_title">Chord Mood Landscapes</string>
-    <string name="mood_landscapes_intro">Different chord types create different feelings and landscapes. Play each chord to see how the landscape changes!</string>
+    <!-- Chords - Stable Or Instable Activity -->
+    <string name="chords_stable_instable_title">Chord Stable Or Instable</string>
+    <string name="chords_stable_instable_intro">Different chord types create different feelings and landscapes. Play each chord to see how the landscape changes!</string>
     
     <!-- Chords - Chord Building Activity -->
     <string name="chord_building_title">Build Your Own Chords</string>
